perf: improve stability and resource paging
